--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -1302,7 +1302,7 @@
         (done) Parser: TOC now ignores refs in listing; EX:__FORCETOC__\n==A&lt;ref&gt;{{complicated_template}}&lt;/ref&gt;== -&gt; ref shows in &lt;h2&gt; but not in TOC.
       </li>
       <li>
-        (done) Parser: * &lt;li&gt; should ignore redundant list item; EX:* &lt;li&gt;a&lt;/li&gt; -&gt; * a. See: <a href="http://it.wikipedia.org/wiki/Milano#Bibliographie" rel="nofollow" class="external free">http://it.wikipedia.org/wiki/Milano#Bibliographie</a>
+        (done) Parser: * &lt;li&gt; should ignore redundant list item; EX:* &lt;li&gt;a&lt;/li&gt; -&gt; * a. See: <a href="/site/it.wikipedia.org/wiki/Milano">http://it.wikipedia.org/wiki/Milano#Bibliographie</a>
       </li>
       <li>
         (done) Import: species wiki was not downloading from Import/Script page {detected by hidp123}.
@@ -2152,7 +2152,7 @@
     </p>
     <ul>
       <li>
-        (add) Wikidata: #property and Infoboxes (Phase 2) {assisted by Schnark} <a href="http://xowa.org/home/wiki/Diagnostics/Wikidata/Property" id="xolnki_53" title="Diagnostics/Wikidata/Property">Diagnostics/Wikidata/Property</a>
+        (add) Wikidata: #property and Infoboxes (Phase 2) {assisted by Schnark} <a href="http://xowa.org/home/wiki/Diagnostics/Wikidata/Property" id="xolnki_53" title="Diagnostics/Wikidata/Property" class="xowa-visited">Diagnostics/Wikidata/Property</a>
       </li>
       <li>
         (add) Wikidata Json structured data formatter {contributed by Schnark} <a href="/site/www.wikidata.org/wiki/Q2">http://www.wikidata.org/wiki/Q2</a>
