--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -2563,7 +2563,7 @@
     </p>
     <ul>
       <li>
-        File: Continue loading files if indicator appears on page (affects files not loading on pages with indicator). See: <a href="https://it.wikipedia.org/wiki/Storia_della_Corsica" rel="nofollow" class="external free">https://it.wikipedia.org/wiki/Storia_della_Corsica</a>
+        File: Continue loading files if indicator appears on page (affects files not loading on pages with indicator). See: <a href="/site/it.wikipedia.org/wiki/Storia_della_Corsica">https://it.wikipedia.org/wiki/Storia_della_Corsica</a>
       </li>
       <li>
         Gui: Update wiki when moving back from one wiki to another (affects urls not working); EX:Load XOWA -&gt; Go to s.w: -&gt; Press Back -&gt; Click any link. [broken since:v2.2.4]
@@ -2627,7 +2627,7 @@
     </p>
     <ul>
       <li>
-        Scribunto: Do not treat raw messages returning empty string as an error (affects 21 it.w pages generating error messages in log); EX:raw={{Blank}} -&gt; "" -&gt; error in log. See: <a href="https://it.wikipedia.org/wiki/L'Internazionale" rel="nofollow" class="external free">https://it.wikipedia.org/wiki/L'Internazionale</a>
+        Scribunto: Do not treat raw messages returning empty string as an error (affects 21 it.w pages generating error messages in log); EX:raw={{Blank}} -&gt; "" -&gt; error in log. See: <a href="/site/it.wikipedia.org/wiki/L%27Internazionale">https://it.wikipedia.org/wiki/L'Internazionale</a>
       </li>
     </ul>
     <p>
