--- a/home/wiki/Dashboard/Import/Online.html
+++ b/home/wiki/Dashboard/Import/Online.html
@@ -1077,7 +1077,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('it.wikipedia.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="http://it.wikipedia.org" rel="nofollow" class="external free">http://it.wikipedia.org</a>
+          <a href="/site/it.wikipedia.org/wiki/">http://it.wikipedia.org</a>
         </td>
         <td>
           Italian
