--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -285,7 +285,7 @@
           n
         </td>
         <td class='cell_center'>
-          2019-04-27
+          2019-08-19
         </td>
         <td class='cell_center'>
           2017-03-20
@@ -390,7 +390,7 @@
           n
         </td>
         <td class='cell_center'>
-          2019-06-09
+          2019-08-14
         </td>
         <td class='cell_center'>
           2017-03-20
@@ -454,6 +454,41 @@
       </tr>
       <tr>
         <td>
+          it.wikipedia.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2019-09-06
+        </td>
+        <td class='cell_center'>
+          2017-03-20
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("it.wikipedia.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("it.wikipedia.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("it.wikipedia.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
           nethackwiki.com
         </td>
         <td class='cell_center'>
@@ -494,7 +529,7 @@
           n
         </td>
         <td class='cell_center'>
-          2019-05-01
+          2019-09-01
         </td>
         <td class='cell_center'>
           2017-03-20
