--- a/home/wiki/Diagnostics.html
+++ b/home/wiki/Diagnostics.html
@@ -144,7 +144,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Wikidata/Property" id="xolnki_33" title="Diagnostics/Wikidata/Property">Diagnostics/Wikidata/Property</a>
+        <a href="http://xowa.org/home/wiki/Diagnostics/Wikidata/Property" id="xolnki_33" title="Diagnostics/Wikidata/Property" class="xowa-visited">Diagnostics/Wikidata/Property</a>
       </li>
     </ul>
     <h2>
