--- a/home/wiki/Diagnostics/HTML_Tidy.html
+++ b/home/wiki/Diagnostics/HTML_Tidy.html
@@ -129,7 +129,7 @@
       <br>
     </p>
     <h2>
-      <span class="mw-headline" id="div_inside_span_should_be_reparented_correctly_(http://it.wikipedia.org/wiki/Portale:Astronomia#Il_cielo_nel_mese_di_maggio">div inside span should be reparented correctly (<a href="http://it.wikipedia.org/wiki/Portale:Astronomia#Il_cielo_nel_mese_di_maggio" rel="nofollow" class="external free">http://it.wikipedia.org/wiki/Portale:Astronomia#Il_cielo_nel_mese_di_maggio</a></span>
+      <span class="mw-headline" id="div_inside_span_should_be_reparented_correctly_(http://it.wikipedia.org/wiki/Portale:Astronomia#Il_cielo_nel_mese_di_maggio">div inside span should be reparented correctly (<a href="/site/it.wikipedia.org/wiki/Portale:Astronomia">http://it.wikipedia.org/wiki/Portale:Astronomia#Il_cielo_nel_mese_di_maggio</a></span>
     </h2>
     <p>
       <code>fails if "should be on right" is not right of "should not be left"</code><br>
@@ -218,7 +218,7 @@
       </tr>
     </table>
     <h2>
-      <span class="mw-headline" id="reparent_nested_table_not_inside_a_.3Ctd.3E_(http://it.wikipedia.org/wiki/Portale:Animali_--_Main_Body_)">reparent nested table not inside a &lt;td&gt; (<a href="http://it.wikipedia.org/wiki/Portale:Animali" rel="nofollow" class="external free">http://it.wikipedia.org/wiki/Portale:Animali</a> -- Main Body )</span>
+      <span class="mw-headline" id="reparent_nested_table_not_inside_a_.3Ctd.3E_(http://it.wikipedia.org/wiki/Portale:Animali_--_Main_Body_)">reparent nested table not inside a &lt;td&gt; (<a href="/site/it.wikipedia.org/wiki/Portale:Animali">http://it.wikipedia.org/wiki/Portale:Animali</a> -- Main Body )</span>
     </h2>
     <p>
       <code>fails if "text 2" is not directly underneath "text 1"</code><br>
