--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -120,6 +120,14 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
+      v4.6.4.1908 is an interim release. It features the following:
+    </p>
+    <ul>
+      <li>
+        (PC) Fix read-only detection
+      </li>
+    </ul>
+    <p>
       v4.6.3.1908 features the following:
     </p>
     <ul>
@@ -359,7 +367,7 @@
             If the font size is too small, right-click and choose Font Increase
           </li>
           <li>
-            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.gui.general" id="xolnki_31" title="Special:XowaCfg?grp=xowa.gui.general">Options: Gui - Window</a> and <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.html.css" id="xolnki_32" title="Special:XowaCfg?grp=xowa.html.css">Options: HTML - CSS</a>
+            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.gui.general" id="xolnki_31" title="Special:XowaCfg?grp=xowa.gui.general" class="xowa-visited">Options: Gui - Window</a> and <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.html.css" id="xolnki_32" title="Special:XowaCfg?grp=xowa.html.css">Options: HTML - CSS</a>
           </li>
         </ul>
       </li>
