--- a/home/wiki/Dashboard/Image_databases.html
+++ b/home/wiki/Dashboard/Image_databases.html
@@ -304,7 +304,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://it.wikipedia.org" rel="nofollow" class="external free">https://it.wikipedia.org</a>
+            <a href="/site/it.wikipedia.org/wiki/">https://it.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
